cli/tests/ui/binding_weak_wrong_type.stderr
Error: manifest::validation_error

  × check failed
  ╰─▶ manifest validation error at bindings[0].weak: expected boolean, found
      string
    ╭─[<CARGO_MANIFEST_DIR>/tests/ui/binding_weak_wrong_type.json5:24:58]
 23 │   bindings: [
 24 │     { to: "#green.llm", from: "#green_router.llm", weak: "yes" },
    ·                                                          ──┬──
    ·                                                            ╰── expected boolean, found string
 25 │     { to: "#green.env", from: "#tau2.env" },
    ╰────
